--- a/Finance_Time_Series_250528/pro_3_Finance_Time_Series_Model_Training.ipynb
+++ b/Finance_Time_Series_250528/pro_3_Finance_Time_Series_Model_Training.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "23d2e551",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "fa909210",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "93a3cca0",
    "metadata": {},
    "outputs": [],
@@ -99,13 +99,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "bb72680d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 최대 20분정도가 소요됩니다. 시간이 부족하다면 파라미터를 조절하여 진행하세요.\n",
-    "bc_params = {'n_estimators': [5, 10, 20],\n",
+    "bc_rf_bag_params = {'n_estimators': [5, 10, 20],\n",
     "             'max_features': [0.5, 0.7],\n",
     "             'estimator__max_depth': [3,5,10,20],\n",
     "             'estimator__max_features': [None, 'sqrt'],\n",
@@ -113,6 +113,20 @@
     "             'bootstrap_features': [False, True]\n",
     "            }\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a033b1fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bc_params_rf = {'n_estimators': [5, 10, 20],\n",
+    "             'max_depth': [3,5,10,20],\n",
+    "             'max_features': [None, 'sqrt'],\n",
+    "             'min_samples_leaf': [3, 5, 10]\n",
+    "            }"
    ]
   },
   {
@@ -139,12 +153,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "32a59231",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bc_gbm_params = {\n",
+    "bc_gbm_bag_params = {\n",
     "    'n_estimators': [5, 10, 20],  # BaggingClassifier의 기본 추정기 개수\n",
     "    'max_features': [0.5, 0.7],   # BaggingClassifier가 각 추정기를 훈련시킬 때 사용할 특성 비율\n",
     "    'estimator__n_estimators': [50, 100], \n",
@@ -153,6 +167,38 @@
     "    'estimator__subsample': [0.7, 1.0],   \n",
     "    'estimator__colsample_bytree': [0.7, 1.0], \n",
     "    'bootstrap_features': [False, True]    # BaggingClassifier 특성 부트스트랩 여부\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "700f4787",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bc_xgb_params = {'max_depth': [3, 5, 10, 20], \n",
+    "    'learning_rate': [0.01, 0.1], \n",
+    "    'subsample': [0.7, 1.0],   \n",
+    "    'colsample_bytree': [0.7, 1.0], \n",
+    "    'max_leaf_nodes': [0, 1, 3, 5, 10], \n",
+    "    'n_estimators': [50, 100] \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6152cc9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bc_lgb_params = {'max_depth': [3, 5, 10, 20], \n",
+    "    'learning_rate': [0.01, 0.1], \n",
+    "    'subsample': [0.7, 1.0],   \n",
+    "    'feature_fraction': [0.7, 1.0], \n",
+    "    'max_leaf_nodes': [0, 1, 3, 5, 10], \n",
+    "    'n_estimators': [50, 100] \n",
     "}"
    ]
   },
@@ -188,15 +234,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "44036577",
    "metadata": {},
    "outputs": [],
    "source": [
     "# GridSearchCV 적용\n",
-    "gs_rfc = GridSearchCV(bag_rfc, bc_params, cv=cv, n_jobs=-1, verbose=1)\n",
-    "gs_xgb = GridSearchCV(bag_xgb, bc_gbm_params, cv=cv, n_jobs=-1, verbose=1)\n",
-    "gs_lgb = GridSearchCV(bag_lgb, bc_gbm_params, cv=cv, n_jobs=-1, verbose=1)"
+    "gs_rf_bag = GridSearchCV(bag_rfc, bc_rf_bag_params, cv=cv, n_jobs=-1, verbose=1)\n",
+    "gs_xgb_bag = GridSearchCV(bag_xgb, bc_gbm_bag_params, cv=cv, n_jobs=-1, verbose=1)\n",
+    "gs_lgb_bag = GridSearchCV(bag_lgb, bc_gbm_bag_params, cv=cv, n_jobs=-1, verbose=1)\n",
+    "gs_rf = GridSearchCV(rfc, bc_params_rf, cv=cv, n_jobs=-1, verbose=1)\n",
+    "gs_xgb = GridSearchCV(xgb_clf, bc_xgb_params, cv=cv, n_jobs=-1, verbose=1)\n",
+    "gs_lgb = GridSearchCV(lgb_clf, bc_lgb_params, cv=cv, n_jobs=-1, verbose=1)"
    ]
   },
   {
@@ -230,8 +279,8 @@
    ],
    "source": [
     "# fit\n",
-    "gs_rfc.fit(train_x, train_y)\n",
-    "print(\"Random Forest Bagging Best Params:\", gs_rfc.best_params_)"
+    "gs_rf_bag.fit(train_x, train_y)\n",
+    "print(\"Random Forest Bagging Best Params:\", gs_rf_bag.best_params_)"
    ]
   },
   {
@@ -282,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "82652540",
    "metadata": {},
    "outputs": [
@@ -882,13 +931,46 @@
     }
    ],
    "source": [
-    "gs_lgb.fit(train_x, train_y)\n",
-    "print(\"LightGBM Bagging Best Parameters:\", gs_lgb.best_params_)"
+    "gs_lgb_bag.fit(train_x, train_y)\n",
+    "print(\"LightGBM Bagging Best Parameters:\", gs_lgb_bag.best_params_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "id": "55174861",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gs_rf.fit(train_x, train_y)\n",
+    "print(\"Random Forest Best Params:\", gs_rf.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2980000b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gs_xgb.fit(train_x, train_y)\n",
+    "print(\"XGBoost Best Params:\", gs_xgb.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b45bbd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gs_lgb.fit(train_x, train_y)\n",
+    "print(\"LightGBM Best Params:\", gs_lgb.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "fa628e08",
    "metadata": {},
    "outputs": [
@@ -2269,12 +2351,15 @@
    "source": [
     "bag_rfc.fit(train_x, train_y)\n",
     "bag_xgb.fit(train_x, train_y)\n",
-    "bag_lgb.fit(train_x, train_y)"
+    "bag_lgb.fit(train_x, train_y)\n",
+    "rfc.fit(train_x, train_y)\n",
+    "xgb_clf.fit(train_x, train_y)\n",
+    "lgb_clf.fit(train_x, train_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "0a679d5f",
    "metadata": {},
    "outputs": [
@@ -2712,13 +2797,13 @@
    ],
    "source": [
     "# best estimator \n",
-    "gs_rfc_best = gs_rfc.best_estimator_\n",
-    "gs_rfc_best.fit(train_x, train_y)"
+    "gs_rfc_bag_best = gs_rf_bag.best_estimator_\n",
+    "gs_rfc_bag_best.fit(train_x, train_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "187ec6f1",
    "metadata": {},
    "outputs": [
@@ -3248,13 +3333,13 @@
    ],
    "source": [
     "# best estimator \n",
-    "gs_xgb_best = gs_xgb.best_estimator_\n",
-    "gs_xgb_best.fit(train_x, train_y)"
+    "gs_xgb_bag_best = gs_xgb_bag.best_estimator_\n",
+    "gs_xgb_bag_best.fit(train_x, train_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "88c970c2",
    "metadata": {},
    "outputs": [
@@ -4268,6 +4353,42 @@
    ],
    "source": [
     "# best estimator \n",
+    "gs_lgb_bag_best = gs_lgb_bag.best_estimator_\n",
+    "gs_lgb_bag_best.fit(train_x, train_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c0cb9dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# best estimator \n",
+    "gs_rf_best = gs_rf.best_estimator_\n",
+    "gs_rf_best.fit(train_x, train_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db38d2df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# best estimator \n",
+    "gs_xgb_best = gs_xgb.best_estimator_\n",
+    "gs_xgb_best.fit(train_x, train_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d89a56e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# best estimator \n",
     "gs_lgb_best = gs_lgb.best_estimator_\n",
     "gs_lgb_best.fit(train_x, train_y)"
    ]
@@ -4286,14 +4407,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "a9c84e56",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 예측값 확인\n",
-    "pred_y_2 = gs_rfc_best.predict(test_x)\n",
-    "prob_y_2 = gs_rfc_best.predict_proba(test_x)"
+    "pred_y_2 = gs_rfc_bag_best.predict(test_x)\n",
+    "prob_y_2 = gs_rfc_bag_best.predict_proba(test_x)"
    ]
   },
   {
@@ -4310,14 +4431,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "85dbd998",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 예측값 확인\n",
-    "pred_y_4 = gs_xgb_best.predict(test_x)\n",
-    "prob_y_4 = gs_xgb_best.predict_proba(test_x)"
+    "pred_y_4 = gs_xgb_bag_best.predict(test_x)\n",
+    "prob_y_4 = gs_xgb_bag_best.predict_proba(test_x)"
    ]
   },
   {
@@ -4334,19 +4455,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "e56dbf62",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 예측값 확인\n",
-    "pred_y_6 = gs_lgb_best.predict(test_x)\n",
-    "prob_y_6 = gs_lgb_best.predict_proba(test_x)"
+    "pred_y_6 = gs_lgb_bag_best.predict(test_x)\n",
+    "prob_y_6 = gs_lgb_bag_best.predict_proba(test_x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
+   "id": "088714a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 예측값 확인\n",
+    "pred_y_7 = rfc.predict(test_x)\n",
+    "prob_y_7 = rfc.predict_proba(test_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "675a39be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 예측값 확인\n",
+    "pred_y_8 = gs_rf_best.predict(test_x)\n",
+    "prob_y_8 = gs_rf_best.predict_proba(test_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b941ad4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 예측값 확인\n",
+    "pred_y_9 = xgb_clf.predict(test_x)\n",
+    "prob_y_9 = xgb_clf.predict_proba(test_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "989f61b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 예측값 확인\n",
+    "pred_y_10 = gs_xgb.predict(test_x)\n",
+    "prob_y_10 = gs_xgb.predict_proba(test_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f85fa821",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 예측값 확인\n",
+    "pred_y_11 = lgb_clf.predict(test_x)\n",
+    "prob_y_11 = lgb_clf.predict_proba(test_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b1d4152",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 예측값 확인\n",
+    "pred_y_12 = gs_lgb_best.predict(test_x)\n",
+    "prob_y_12 = gs_lgb_best.predict_proba(test_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d60f7fee",
    "metadata": {},
    "outputs": [
@@ -4389,7 +4582,7 @@
    ],
    "source": [
     "# test_y, pred_y를 활용한 지표 적용\n",
-    "pre_y = [pred_y_1, pred_y_2, pred_y_3, pred_y_4, pred_y_5, pred_y_6]\n",
+    "pre_y = [pred_y_1, pred_y_2, pred_y_3, pred_y_4, pred_y_5, pred_y_6, pred_y_7, pred_y_8, pred_y_9, pred_y_10, pred_y_11, pred_y_12]\n",
     "for i in pre_y:\n",
     "    confusion = confusion_matrix(test_y, i)\n",
     "    accuracy  = accuracy_score(test_y, i)\n",
@@ -4404,7 +4597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "588a5858",
    "metadata": {},
    "outputs": [
@@ -4433,8 +4626,9 @@
    ],
    "source": [
     "# ROC curve 만들기\n",
-    "prob_y = [prob_y_1, prob_y_2, prob_y_3, prob_y_4, prob_y_5, prob_y_6]\n",
-    "model_names = ['Bagging Random Forest', 'Best Random Forest', 'Bagging XGBoost', 'Best XGBoost', 'Bagging LightGBM', 'Best LightGBM']\n",
+    "prob_y = [prob_y_1, prob_y_2, prob_y_3, prob_y_4, prob_y_5, prob_y_6, prob_y_7, prob_y_8, prob_y_9, prob_y_10, prob_y_11, prob_y_12]\n",
+    "model_names = ['Bagging Random Forest', 'Best Random Forest', 'Bagging XGBoost', 'Best XGBoost', 'Bagging LightGBM', 'Best LightGBM',\n",
+    "               'Random Forest', 'Best Random Forest', 'XGBoost', 'Best XGBoost', 'LightGBM', 'Best LightGBM']\n",
     "\n",
     "for i,a in zip(prob_y,model_names):\n",
     "    fpr, tpr, thresholds = roc_curve(test_y, i[:, 1])\n",
